force-app/main/default/objects/SharePointConnector__c/SharePointConnector__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SharePointConnector</label>
</CustomObject>