force-app/main/default/objects/SharePointConnector__c/fields/spClientId__c.field-meta.xml
<CustomField>
    <fullName>spClientId__c</fullName>
    <description>El identificador del cliente de la aplicación.</description>
    <label>Client Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>