force-app/main/default/objects/SharePointConnector__c/fields/spClientSecret__c.field-meta.xml
<CustomField>
    <fullName>spClientSecret__c</fullName>
    <description>La contraseña</description>
    <label>Client secret</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>