force-app/main/default/objects/SharePointConnector__c/fields/spDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>spDocumentNumber__c</fullName>
    <label>Nº Documentos</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>