force-app/main/default/objects/SharePointConnector__c/fields/spDomainLogin__c.field-meta.xml
<CustomField>
    <fullName>spDomainLogin__c</fullName>
    <defaultValue>&quot;https://login.microsoftonline.com/&quot;</defaultValue>
    <description>El dominio de la página del login</description>
    <label>Dominio Login</label>
    <required>true</required>
    <type>Url</type>
</CustomField>