force-app/main/default/objects/SharePointConnector__c/fields/spModifyPromotionTrigger__c.field-meta.xml
<CustomField>
    <fullName>spModifyPromotionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si es true al modificar una promoción se crea la estructura de carpetas en Sharepoint</inlineHelpText>
    <label>Trigger en modificación de promoción</label>
    <type>Checkbox</type>
</CustomField>