force-app/main/default/objects/SharePointConnector__c/fields/spParentDir__c.field-meta.xml
<CustomField>
    <fullName>spParentDir__c</fullName>
    <description>Directorio padre donde estarán todas las subcarpetas y archivos</description>
    <inlineHelpText>Directorio padre donde estarán todas las subcarpetas y archivos</inlineHelpText>
    <label>Parent Directory</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>