force-app/main/default/objects/SharePointConnector__c/fields/spResource__c.field-meta.xml
<CustomField>
    <fullName>spResource__c</fullName>
    <description>Identificador del recurso</description>
    <label>Resource</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>