force-app/main/default/objects/SharePointConnector__c/fields/spSiteDomain__c.field-meta.xml
<CustomField>
    <fullName>spSiteDomain__c</fullName>
    <description>Dominio del sitio Sharepoint</description>
    <label>Site Domain</label>
    <required>true</required>
    <type>Url</type>
</CustomField>