force-app/main/default/objects/SharePointConnector__c/fields/spSiteUrl__c.field-meta.xml
<CustomField>
    <fullName>spSiteUrl__c</fullName>
    <description>Url del sitio SharePoint</description>
    <label>Url del sitio</label>
    <required>true</required>
    <type>Url</type>
</CustomField>